<resources>
    <string name="app_name">MyLife</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="john">John</string>
    <string name="btnName">Save</string>
    <string name="notes">Notes</string>
    <string name="tasks">Tasks</string>
    <string name="john_currency">Currency</string>
    <string name="expences">Expences</string>
    <string name="title_activity_notes_acivity">NotesAcivity</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="title_activity_expences">ExpencesActivity</string>
</resources>
