<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/tvWelcomeMsg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="Welcome Guest"
        android:gravity="center"
        android:textSize="20dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/notes"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:textSize="24dp"
        android:layout_margin="20dp"
        android:onClick="notes"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/tasks"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:textSize="24dp"
        android:layout_margin="20dp"
        android:onClick="task"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/expences"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:textSize="24dp"
        android:layout_margin="20dp"
        android:onClick="expences"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="Profile"
        android:background="@color/colorAccent"
        android:textColor="#fff"
        android:textSize="24dp"
        android:layout_margin="20dp"
        android:onClick="profile"
        />

</LinearLayout>